--- a/.github/workflows/readme-info-schedule.yml
+++ b/.github/workflows/readme-info-schedule.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: th3c0d3br34ker/github-readme-info@master
         with:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          TIMEZONE: "CST"
+          TIMEZONE: "Asia/Kolkata"
           SHOW_LINES_OF_CODE: "True"
           SHOW_PROFILE_VIEWS: "True"
           SHOW_DAILY_COMMIT: "True"
